[package]
name = "mcexport"
description = "Minecraft Server Prometheus Probe Exporter"
version = "0.5.0"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>"
]
license = "MIT"
repository = "https://github.com/scrayosnet/mcexport"
readme = "README.md"
documentation = "https://github.com/scrayosnet/mcexport"
homepage = "https://github.com/scrayosnet/mcexport"
keywords = ["minecraft", "prometheus", "monitoring", "exporter", "ping"]
categories = ["development-tools", "command-line-utilities"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "tower-log", "tracing", "query"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hickory-resolver = "0.24"
thiserror = "2"
prometheus-client = "0.22"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4.5.23", features = ["derive", "env"] }

[dev-dependencies]
serde_test = "1"
